--- a/style/style.css
+++ b/style/style.css
@@ -7,6 +7,42 @@
     font-size: normal;
 }
 
+*{
+    padding: 0px;
+    margin: 0px;
+    
+}
+
 html {
     scroll-behavior: smooth;
+}
+
+span#burguer{
+    cursor: pointer;
+    background-color: gray;
+    text-align: right;
+}
+
+div.cabecalho{
+    position: relative;
+    background-color: red;
+    width: 70vw;
+    text-align: right;
+    margin: 15px 30px;
+}
+div#content{
+    position: fixed;
+    width: 75vw;
+    background-color: black;
+    margin: 30px 12.5vw 0px;
+    
+
+    
+}
+
+li{
+    list-style: none;
+    text-align: left;
+    padding: 2px 0px 2px 10px;
+    
 }
