--- a/estilos/style.css
+++ b/estilos/style.css
@@ -71,41 +71,18 @@ header{
 }
 
 .menu-links{
-    display: none;
+    display: block;
     overflow-y: hidden;
+    height: 0px;
+    transition: all .3s ease;
 }
 
 .menu-links.abriu{
-    display: block;
-    animation: abrir .3s ease ;
-}
-
-.menu-links.abriu.fechar{
-    animation: fechar .3s ease forwards;
-}
-
-@keyframes abrir{
-    from{
-        height: 0px;
-    }
-    to{
-        height: 305px;
-    }
-}
-
-@keyframes fechar{
-    0%{
-        height: 305px;
-    }
-    100%{
-        height: 0px;
-        display: none;
-    }
+    height: 240px;
 }
 
 ul>li{
-    margin-left: 20px;
-    margin-bottom: 20px;
+    margin-left: 10px;
 }
 
 ul>li>a{
@@ -115,11 +92,18 @@ ul>li>a{
     font-size: 25px;
 }
 
+a.botao-inscricao{
+    margin-left: -10px;
+    padding: 5px 20px;
+    border-radius: 25px;
+    border: solid 1px;
+}
+
 main>section{
     height: 100vh;
 }
 
 section#principal{
     padding-top: 140px;
-
+    
 }
