--- a/estilos/style.css
+++ b/estilos/style.css
@@ -99,11 +99,24 @@ a.botao-inscricao{
     border: solid 1px;
 }
 
-main>section{
+section{
     height: 100vh;
 }
 
 section#principal{
     padding-top: 140px;
-    
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-image: url(../images/slides/copa-unai-1.JPG);
+    height: 70vh;
+    animation: imagemdefundo 10s infinite;
+}
+
+@keyframes imagemdefundo{
+    0%{
+        background-size: 300%;
+    }
+    100%{
+        background-size: 150%;
+    }
 }
