--- a/estilos/style.css
+++ b/estilos/style.css
@@ -46,6 +46,7 @@ header{
     top: 20px;
     border-radius: 20px;
     padding: 15px;
+    z-index: 2;
 }
 
 .logo-container{
@@ -82,7 +83,7 @@ header{
 }
 
 ul>li{
-    margin-left: 10px;
+    margin-left: 20px;
 }
 
 ul>li>a{
@@ -103,20 +104,70 @@ section{
     height: 100vh;
 }
 
-section#principal{
-    padding-top: 140px;
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-image: url(../images/slides/copa-unai-1.JPG);
+section#principal {
+    height: 70vh; /* Ajuste a altura da seção conforme necessário */
+  }
+
+  #minha-secao {
+    position: relative; /* Posicionamento relativo para o conteúdo sobreposto */
+    height: 500px; /* Ajuste a altura da seção conforme necessário */
+  }
+  
+  .imagem-fundo {
+    position: absolute; /* Posicionamento absoluto para a imagem */
+    top: 0;
+    left: 0;
+    width: 768px;
     height: 70vh;
-    animation: imagemdefundo 10s infinite;
+    background-image: url('../images/slides/copa-unai-1.JPG'); /* Substitua por URL da sua imagem */
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    filter: blur(0px); /* Aplique o desfoque (ajuste o valor em px para o nível desejado) */
+    animation: animacaoImagem 5s forwards;
+  }
+  
+  .texto-sobreposto {
+    position: relative; /* Posicionamento relativo para estilização dentro da seção */
+    top: 50%;
+    left: 50%;
+    width: 55vh;
+    height: auto;
+    transform: translate(-50%, -50%); /* Compense a posição central */
+    background-color: var(--preto-transparente); /* Crie um fundo semitransparente */
+    padding: 20px;
+    color: white; /* Altere a cor do texto para contraste */
+    border-radius: 20px;
+  }
+
+#cowntdown-container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
-@keyframes imagemdefundo{
+.text{
+    font-size: 2rem;
+    line-height: 1.5;
+    margin: 1rem 2rem;
+}
+
+.countdown-el{
+    text-align: center;
+}
+
+.countdown-el span{
+    font-size: 1rem;
+}
+
+@keyframes animacaoImagem {
     0%{
-        background-size: 350%;
+        background-size: 250%;
     }
     100%{
         background-size: 150%;
     }
 }
+
+
+
