--- a/estilos/style.css
+++ b/estilos/style.css
@@ -205,3 +205,7 @@ section#eventos-anteriores img{
 
     align-items: center;
 }
+
+#sobre{
+    background-image: url(../images/eventos-anteriores/Futsal-dois.png);
+}
