--- a/estilos/style.css
+++ b/estilos/style.css
@@ -110,7 +110,7 @@ section#principal {
     align-items: center;
     flex-direction: column;
     background-size: cover;
-    background-image: url(../images/slides/arquibancada-recortada.JPG);
+    background-image: url(../images/slides/arquibancada-reduzida.JPG);
     background-repeat: no-repeat;
     animation: anim-slide 5s forwards;
 }
@@ -120,7 +120,7 @@ section#principal {
         background-position: left center;
     }
     100%{
-        background-position: right center;
+        background-position: center center;
     }
 }
 
@@ -169,6 +169,24 @@ section#principal {
     text-align: center;
 }
 
-.swiper-slide img{
-    width: 100vw;
+.swiper-slide>img{
+    width: 100%;
+}
+
+.swiper{
+    display: flex;
+    top: 50%;
+    transform: translateY(-50%);
+    border-radius: 40px;
+
+    width: 80vw;
+}
+
+#eventos-anteriores{
+    background: linear-gradient(#976c00 0%, var(--cor-principal)100%);
+    height: 85vh;
+}
+
+section{
+    height: 100vh;
 }
