--- a/estilos/style.css
+++ b/estilos/style.css
@@ -178,12 +178,16 @@ section#principal {
     top: 50%;
     transform: translateY(-50%);
     border-radius: 40px;
-
     width: 80vw;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.418);
+}
+
+.swiper-button-next, .swiper-button-prev{
+    opacity: 0;
 }
 
 #eventos-anteriores{
-    background: linear-gradient(#976c00 0%, var(--cor-principal)100%);
+    background: linear-gradient(#a77700 0%, #c78f00 70%, var(--cor-principal)100%);
     height: 85vh;
 }
 
