--- a/estilos/style.css
+++ b/estilos/style.css
@@ -12,6 +12,8 @@
     --preto-transparente: rgba(0, 0, 0, 0.6);
     --fonte-de-titulo: Poppins;
     --fonte-de-texto: Mukta;
+    --swiper-pagination-bullet-widht: 12px;
+    --swiper-pagination-bullet-size: 12px;
 }
 
 body{
@@ -179,18 +181,55 @@ section#principal {
     transform: translateY(-50%);
     border-radius: 40px;
     width: 80vw;
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.418);
 }
 
 .swiper-button-next, .swiper-button-prev{
     opacity: 0;
 }
 
+
 #eventos-anteriores{
-    background: linear-gradient(#a77700 0%, #c78f00 70%, var(--cor-principal)100%);
+    /*background: linear-gradient(#a77700 0%, #c78f00 70%, var(--cor-principal)100%);*/
     height: 85vh;
 }
 
-section{
-    height: 100vh;
+.swiper-pagination-bullet{
+    width: 40px;
+    height: 40px;
+}
+
+.swiper-pagination-bullet.swiper-pagination-bullet-active{
+    background-color: var(--cor-azul-leve);
+}
+
+section#sobre{
+    background-color: var(--cor-mais-escura);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+section#sobre div{
+    margin: 3vh 0px;
+    width: 90vw;
+    border-radius: 30px;
+    height: 90vw;
+    background: linear-gradient(var(--cor-mais-escura)0%, var(--cor-de-secoes)100%);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+section#sobre>div h1, h2{
+    margin: 10px;
+    font-family: var(--fonte-de-titulo);
+    font-size: 1.3rem;
+}
+
+section#sobre p{
+    font-family: var(--fonte-de-texto);
+    color: white;
+    font-size: 1.2rem;
+    width: 90vw;
+    margin: 0px 0px 3vh 0px;
 }
