--- a/estilos/style.css
+++ b/estilos/style.css
@@ -89,7 +89,7 @@ header{
 }
 
 ul>li{
-    margin-left: 20px;
+    margin: 10px 0px 10px 20px;
 }
 
 ul>li>a{
@@ -100,7 +100,6 @@ ul>li>a{
 }
 
 a.botao-inscricao{
-    margin-left: -10px;
     padding: 5px 20px;
     border-radius: 25px;
     border: solid 1px;
@@ -176,21 +175,27 @@ section#principal {
 }
 
 .swiper{
-    display: flex;
-    top: 50%;
-    transform: translateY(-50%);
     border-radius: 40px;
-    width: 80vw;
+    width: 90vw;
 }
 
 .swiper-button-next, .swiper-button-prev{
     opacity: 0;
 }
 
-
 #eventos-anteriores{
     /*background: linear-gradient(#a77700 0%, #c78f00 70%, var(--cor-principal)100%);*/
     height: 85vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+#eventos-anteriores h1{
+    font-family: var(--fonte-de-titulo);
+    font-size: 1.3rem;
+    margin-bottom: 40px;
 }
 
 .swiper-pagination-bullet{
@@ -233,4 +238,24 @@ section#sobre p{
     font-size: 1.2rem;
     width: 90vw;
     margin: 0px 0px 3vh 0px;
+}
+
+footer{
+    color: white;
+    bottom: 0px;
+    background-color: var(--cor-mais-escura);
+}
+
+footer div{
+    padding: 1em 0px 0px 1em;
+}
+
+footer img{
+    padding: .5em;
+}
+
+footer p{
+    padding: .1em 1em 1em;
+    font-family: var(--fonte-de-texto);
+    font-size: 1.2rem;
 }
