--- a/estilos/style.css
+++ b/estilos/style.css
@@ -107,7 +107,7 @@ a.botao-inscricao{
 }
 
 section#principal {
-    height: 100vh; /* Ajuste a altura da seção conforme necessário */
+    height: 101vh; /* Ajuste a altura da seção conforme necessário */
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -172,13 +172,17 @@ section#principal {
 }
 
 .swiper-slide>img{
+    height: 100%;
     width: 100%;
 }
 
 .swiper{
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.473);
     border-radius: 40px;
     width: 90vw;
 }
+
+
 
 .swiper-button-next, .swiper-button-prev{
     opacity: 0;
@@ -186,11 +190,12 @@ section#principal {
 
 #eventos-anteriores{
     /*background: linear-gradient(#a77700 0%, #c78f00 70%, var(--cor-principal)100%);*/
-    height: 85vh;
+    height: 90vh;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    transition: height 2s;
 }
 
 #eventos-anteriores h1{
@@ -216,6 +221,7 @@ section#sobre{
 }
 
 section#sobre div{
+    transform: translateX(-110%);
     margin: 3vh 0px;
     width: 90vw;
     border-radius: 30px;
@@ -224,6 +230,7 @@ section#sobre div{
     display: flex;
     flex-direction: column;
     justify-content: center;
+    transition: transform 2s;
 }
 
 section#sobre>div h2, h3{
@@ -234,6 +241,8 @@ section#sobre>div h2, h3{
 }
 
 section#sobre p{
+    transform: translateX(-110%);
+    transition: transform 2s;
     font-family: var(--fonte-de-texto);
     color: white;
     font-size: 1.2rem;
@@ -259,4 +268,25 @@ footer p{
     padding: .1em 1em 1em;
     font-family: var(--fonte-de-texto);
     font-size: 1.2rem;
+}
+
+.hidden{
+    opacity: 1;
+    filter: blur(10px);
+    transition: ALL 2s;
+}
+
+.show{
+    opacity: 1;
+    filter: blur(0px);
+
+}
+
+section#sobre.show div{
+    transform: translateX(0%);
+}
+
+section#sobre.show p{
+    transition-delay: 500ms;
+    transform: translateX(0%);
 }
