--- a/estilos/style.css
+++ b/estilos/style.css
@@ -5,6 +5,7 @@
 
 :root{
     --cor-de-secoes: #b3cbb9;
+    --cor-de-secoes-mais-escuro: #73a180;
     --cor-mais-escura: #3a4e48;
     --cor-principal: #ffb500;
     --cor-de-destaque: #c84630;
@@ -131,6 +132,23 @@ section#principal {
     }
 }
 
+section#principal .div-principal{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+section#principal a{
+    font-family: var(--fonte-de-titulo);
+    font-size: 1.2rem;
+    font-weight: 700;
+    color: white;
+    padding: 10px 20px;
+    margin-bottom: 20px;
+    border-radius: 20px;
+    background-color: var(--cor-principal);
+}
+
 .conteudo-principal{
     background-color: var(--preto-transparente);
     margin: auto;
@@ -195,6 +213,7 @@ div.conteudo-principal>p{
     box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.473);
     border-radius: 40px;
     width: 90vw;
+    margin: auto;
 }
 
 .swiper-button-next, .swiper-button-prev{
@@ -202,7 +221,7 @@ div.conteudo-principal>p{
 }
 
 #eventos-anteriores{
-    background-color: var(--cor-de-secoes);
+    background-color: var(--cor-de-secoes-mais-escuro);
     /*background: linear-gradient(#a77700 0%, #c78f00 70%, var(--cor-principal)100%);*/
     height: 100vh;
     display: flex;
@@ -214,8 +233,9 @@ div.conteudo-principal>p{
 
 #eventos-anteriores h1{
     font-family: var(--fonte-de-titulo);
-    font-size: 1.3rem;
-    margin-bottom: 40px;
+    font-size: 1.6rem;
+    margin: auto 0px 0px 0px;
+    color: white;
 }
 
 .swiper-pagination-bullet{
