--- a/estilos/style.css
+++ b/estilos/style.css
@@ -57,11 +57,6 @@ header{
     z-index: 3;
 }
 
-section{
-    z-index: 1;
-    position: relative;
-}
-
 .logo-container{
     padding: 15px;
     display: flex;
@@ -113,7 +108,7 @@ a.botao-inscricao{
 }
 
 section#principal {
-    height: 101vh; /* Ajuste a altura da seção conforme necessário */
+    height: 101dvh; /* Ajuste a altura da seção conforme necessário */
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -223,7 +218,7 @@ div.conteudo-principal>p{
 #eventos-anteriores{
     background-color: var(--cor-de-secoes-mais-escuro);
     /*background: linear-gradient(#a77700 0%, #c78f00 70%, var(--cor-principal)100%);*/
-    height: 100vh;
+    height: 100dvh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -256,10 +251,10 @@ section#sobre{
 }
 
 section#sobre div{
-    margin: 3vh 0px;
+    margin: 3dvh 0px;
     width: 90vw;
     border-radius: 30px;
-    height: 50vh;
+    height: 50dvh;
     background: linear-gradient(var(--cor-mais-escura)0%, #4c685f 100%);
     display: flex;
     flex-direction: column;
